feat(user): add user tag retrieval functionality in profile services (#56)
## **PR 타이틀**

- Squash 시 최종 커밋 제목이 되므로 **Conventional Commits** 권장
    
    예) PR 제목 (#PR번호), `feat: support refresh token rotation (#1234)`

##  Summary
- user port 부분 외부 의존성 제거
- port 조회 로직 구현

##  Related Issue
- Issue Number: #<이슈번호>
- (선택) Closes #<이슈번호>  ← 머지 시 자동 닫힘

##  Changes
- 주요 변경사항 bullet

##  Discussion Topic
- 의논하고싶은 주제

##  Checklist
- [ ] 로컬 테스트 완료
- [ ] lint 통과(로컬)
- [ ] 리뷰어 요청(최소 2명), 라벨/스코프 지정
- [ ] 브랜치 최신화(rebase) 및 충돌 없음
